[gd_scene load_steps=9 format=3 uid="uid://btpotfo7v6c50"]

[ext_resource type="Script" path="res://Scripts/Enemies/TowerEnemy.gd" id="1_wyg77"]
[ext_resource type="Texture2D" uid="uid://d2b8aol0ypt23" path="res://Art/Characters/EyeofSauron.png" id="2_s8t23"]
[ext_resource type="PackedScene" path="res://Scenes/Components/HealthComponent.tscn" id="3_faeaw"]
[ext_resource type="PackedScene" path="res://Scenes/Components/HitboxComponent.tscn" id="5_7ldd5"]
[ext_resource type="PackedScene" path="res://Scenes/Components/HurtboxComponent.tscn" id="6_taqc1"]
[ext_resource type="PackedScene" uid="uid://c4trest17eiso" path="res://Scenes/Components/HealthBar.tscn" id="6_yt3uw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mdcyp"]
size = Vector2(10, 52)

[sub_resource type="CircleShape2D" id="CircleShape2D_3h7bf"]
radius = 48.0416

[node name="TowerEnemy" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_wyg77")

[node name="TowerEnemySprite" type="Sprite2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.025737, 0.025737)
texture = ExtResource("2_s8t23")

[node name="TowerEnemyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_mdcyp")

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(-4.71235, -4.71235)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
scale = Vector2(1.0043, 1.20613)
shape = SubResource("CircleShape2D_3h7bf")

[node name="TowerEnemyHealth" parent="." instance=ExtResource("3_faeaw")]

[node name="TowerEnemyHitbox" parent="." node_paths=PackedStringArray("Health") instance=ExtResource("5_7ldd5")]
position = Vector2(0, 1)
collision_layer = 4
Health = NodePath("../TowerEnemyHealth")

[node name="TowerEnemyHitCollision2" type="CollisionShape2D" parent="TowerEnemyHitbox"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_mdcyp")

[node name="TowerEnemyHurtbox" parent="." instance=ExtResource("6_taqc1")]
position = Vector2(0, 1)
collision_layer = 0
collision_mask = 2

[node name="TowerEnemyHurtCollision2" type="CollisionShape2D" parent="TowerEnemyHurtbox"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_mdcyp")

[node name="TowerHealthBar" parent="." node_paths=PackedStringArray("Health_component") instance=ExtResource("6_yt3uw")]
offset_left = -19.0
offset_top = 34.0
offset_right = 57.0
offset_bottom = 38.0
Health_component = NodePath("../TowerEnemyHealth")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
